--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server.js",
+    "start": "node server/server.js",
     "test": "mocha server/**/*.test.js",
-    "test-watch":"nodemon --exec 'npm test' "
+    "test-watch": "nodemon --exec 'npm test' "
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "moment": "^2.22.1",
     "path": "^0.12.7",
     "socket.io": "^2.1.0"
   },
